--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -25,7 +25,13 @@
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
+\newcommand{\decomp}{\mathsf{Dec}}
+
 \newcommand{\degreeof}{\mathsf{deg}}
+
+\newcommand{\ders}[1]{\mathsf{Ders}[ #1 ]}
+
+\newcommand{\derschc}{\textsc{DersCHC}\xspace}
 
 \newcommand{\dersinvs}[2]{\mathsf{DersInvs}[ #1, #2 ]}
 
@@ -59,17 +65,21 @@
 
 \newcommand{\immsubtrees}[1]{\mathsf{ImmSubtrees}[ #1 ]}
 
-\newcommand{\interps}[1]{\mathsf{Interps_{ #1 }}}
+\newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
 \newcommand{\isind}{\mathsf{IsInd}}
 
 \newcommand{\issat}{\textsc{IsSat}\xspace}
 
+\newcommand{\isvalid}{\mathsf{IsValid}}
+
+\newcommand{\isvalidcex}{\mathsf{IsValidCex}}
+
 \newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
 
 \newcommand{\judges}{\vdash}
 
-\newcommand{\mergeinvs}{\textsc{MergeInvs}\xspace}
+\newcommand{\mergeinvs}{\textsc{Mrg}\xspace}
 
 \newcommand{\nodes}[1]{\mathsf{Nodes}[ #1 ]}
 
@@ -87,7 +97,7 @@
 
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
 
-\newcommand{\solveitp}{\textsc{SolveItp}\xspace}
+\newcommand{\solvechc}{\textsc{SolveCHC}\xspace}
 
 \newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
 
@@ -111,9 +121,11 @@
 
 \newcommand{\verify}{\textsc{Verify}\xspace}
 
-\newcommand{\verifyaux}{\textsc{VerifyAux}\xspace}
+\newcommand{\verifyaux}{\textsc{VAux}\xspace}
 
 \newcommand{\verifyders}{\textsc{VerifyDers}\xspace}
+
+\newcommand{\verifydersaux}{\textsc{VD}'\xspace}
 
 \newcommand{\vocab}{\mathsf{Vocab}}
 
