--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -113,6 +113,8 @@
 
 \newcommand{\symvarsidx}[2]{\mathsf{SymVarsIdx}[ #1, #2 ]}
 
+\newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
+
 \newcommand{\types}{\mathsf{Types}}
 
 \newcommand{\values}{\mathsf{Values}}
