--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,4 +1,6 @@
 % shorthand: paper-specific shorthand
+\newcommand{\alltrue}{\mathsf{AllTrue}}
+
 \newcommand{\apps}[1]{\mathsf{Apps}_{#1}}
 
 \newcommand{\appsof}[1]{\mathsf{Apps}[ #1 ]}
@@ -17,7 +19,11 @@
 
 \newcommand{\chcs}[1]{\mathsf{CHCs}[ #1 ]}
 
+\newcommand{\chkindaux}{\textsc{ChkIndAux}\xspace}
+
 \newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
+
+\newcommand{\chooseder}{\mathsf{ChooseDer}}
 
 \newcommand{\clauses}[1]{\mathsf{Clauses}[ #1 ]}
 
@@ -25,7 +31,11 @@
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
+\newcommand{\cuts}[1]{\mathsf{Cuts}[ #1 ]}
+
 \newcommand{\decomp}{\mathsf{Dec}}
+
+\newcommand{\decompclauses}{\mathsf{Decomp}}
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
@@ -73,7 +83,7 @@
 
 \newcommand{\isvalid}{\mathsf{IsValid}}
 
-\newcommand{\isvalidcex}{\mathsf{IsValidCex}}
+\newcommand{\isvalidcex}{\textsc{IsValidCex}\xspace}
 
 \newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
 
@@ -98,6 +108,8 @@
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
 
 \newcommand{\solvechc}{\textsc{SolveCHC}\xspace}
+
+\newcommand{\stepclauses}{\mathsf{Step}}
 
 \newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
 
