--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -25,6 +25,8 @@
 
 \newcommand{\chooseder}{\mathsf{ChooseDer}}
 
+\newcommand{\chooseres}{\textsc{ChooseRes}\xspace}
+
 \newcommand{\clauses}[1]{\mathsf{Clauses}[ #1 ]}
 
 \newcommand{\const}{\mathsf{Const}}
@@ -43,7 +45,11 @@
 
 \newcommand{\derschc}{\textsc{DersCHC}\xspace}
 
+\newcommand{\dersexps}[1]{\mathsf{Exps}[ #1 ]}
+
 \newcommand{\dersinvs}[2]{\mathsf{DersInvs}[ #1, #2 ]}
+
+\newcommand{\dersrelinvs}[1]{\mathsf{DersRels}[ #1 ]}
 
 \newcommand{\dersrels}[2]{\mathsf{DersRels}[ #1, #2 ]}
 
@@ -115,6 +121,8 @@
 
 \newcommand{\stlc}{\mathsf{STLC}}
 
+\newcommand{\subcuts}[2]{\mathsf{SubCuts}[ #1, #2 ]}
+
 \newcommand{\subexps}[1]{\mathsf{SubExps}[ #1 ]}
 
 \newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
@@ -128,6 +136,8 @@
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
 \newcommand{\types}{\mathsf{Types}}
+
+\newcommand{\unwind}{\textsc{Unwind}\xspace}
 
 \newcommand{\values}{\mathsf{Values}}
 
